// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main page 1`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <!--breadcrumbs-->
  <!--if-->
  <!--WithoutFlushLoader-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018
  (v 0.0.5) </footer>
<!--Footer-->"
`;

exports[`main page 2`] = `
"<header>
  <a class=\\"logo\\" href=\\"\\"> Simple CI </a>
</header>
<!--Header-->
<main>
  <!--breadcrumbs-->
  <!--if-->
  <!--ErrorsPanel-->
  <div class=\\"project-list\\">
    <a class=\\"project-card\\" href=\\"projects/1\\"><span class=\\"name\\">Test</span></a>
    <a class=\\"project-card\\" href=\\"projects/2\\"><span class=\\"name\\">Test2</span></a>
    <!--for-->
    <a class=\\"project-card project-card-create\\" href=\\"projects/create\\">
      <div class=\\"create-icon\\"></div>
    </a>
  </div>
  <!--ProjectsList-->
  <!--content-->
  <!--if-->
  <!--PageContent-->
</main>
<footer> Sham 2018
  (v 0.0.5) </footer>
<!--Footer-->"
`;
